-- MySQL Script for Guidebook Fulfillment Data Model (OFBiz Based)
-- This script is idempotent and can be run multiple times.

SET FOREIGN_KEY_CHECKS = 0;

-- 1. Order Header (The Root)
DROP TABLE IF EXISTS ORDER_HEADER;
CREATE TABLE IF NOT EXISTS ORDER_HEADER (
    ORDER_ID VARCHAR(20) PRIMARY KEY,
    ORDER_TYPE_ID VARCHAR(20),
    ORDER_DATE DATETIME,
    STATUS_ID VARCHAR(20),
    PRODUCT_STORE_ID VARCHAR(20),
    SALES_CHANNEL_ENUM_ID VARCHAR(20)
);

-- 2. Order Item
DROP TABLE IF EXISTS ORDER_ITEM;
CREATE TABLE IF NOT EXISTS ORDER_ITEM (
    ORDER_ID VARCHAR(20),
    ORDER_ITEM_SEQ_ID VARCHAR(20),
    PRODUCT_ID VARCHAR(20),
    QUANTITY DECIMAL(18,4),
    UNIT_PRICE DECIMAL(18,4),
    STATUS_ID VARCHAR(20),
    PRIMARY KEY (ORDER_ID, ORDER_ITEM_SEQ_ID),
    FOREIGN KEY (ORDER_ID) REFERENCES ORDER_HEADER(ORDER_ID)
);

-- 3. Facility (Warehouse Anchor)
DROP TABLE IF EXISTS FACILITY;
CREATE TABLE IF NOT EXISTS FACILITY (
    FACILITY_ID VARCHAR(20) PRIMARY KEY,
    FACILITY_TYPE_ID VARCHAR(20),
    FACILITY_NAME VARCHAR(100),
    DESCRIPTION TEXT
);

-- 4. Facility Location (Zones/Bins)
DROP TABLE IF EXISTS FACILITY_LOCATION;
CREATE TABLE IF NOT EXISTS FACILITY_LOCATION (
    FACILITY_ID VARCHAR(20),
    LOCATION_SEQ_ID VARCHAR(20),
    AREA_ID VARCHAR(20) COMMENT 'Used for Picking Zones',
    AISLE_ID VARCHAR(20),
    SECTION_ID VARCHAR(20),
    LEVEL_ID VARCHAR(20),
    LOCATION_TYPE_ENUM_ID VARCHAR(20) COMMENT 'Used to identify Docking Stations',
    PRIMARY KEY (FACILITY_ID, LOCATION_SEQ_ID),
    FOREIGN KEY (FACILITY_ID) REFERENCES FACILITY(FACILITY_ID)
);

-- 5. Product (Guidebooks & Manuals)
DROP TABLE IF EXISTS PRODUCT;
CREATE TABLE IF NOT EXISTS PRODUCT (
    PRODUCT_ID VARCHAR(20) PRIMARY KEY,
    PRODUCT_TYPE_ID VARCHAR(20),
    INTERNAL_NAME VARCHAR(255),
    DESCRIPTION TEXT,
    LONG_DESCRIPTION TEXT
);

-- 6. Lot (Production Batches)
DROP TABLE IF EXISTS LOT;
CREATE TABLE IF NOT EXISTS LOT (
    LOT_ID VARCHAR(20) PRIMARY KEY,
    CREATION_DATE DATETIME,
    EXPIRATION_DATE DATETIME
);

-- 7. Inventory Item (Serialized Units)
DROP TABLE IF EXISTS INVENTORY_ITEM;
CREATE TABLE IF NOT EXISTS INVENTORY_ITEM (
    INVENTORY_ITEM_ID VARCHAR(20) PRIMARY KEY,
    INVENTORY_ITEM_TYPE_ID VARCHAR(20) DEFAULT 'SERIALIZED_INV_ITEM',
    PRODUCT_ID VARCHAR(20),
    SERIAL_NUMBER VARCHAR(100),
    DATETIME_RECEIVED DATETIME COMMENT 'Used for FIFO logic',
    LOT_ID VARCHAR(20),
    FACILITY_ID VARCHAR(20),
    LOCATION_SEQ_ID VARCHAR(20),
    STATUS_ID VARCHAR(20),
    FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCT(PRODUCT_ID),
    FOREIGN KEY (LOT_ID) REFERENCES LOT(LOT_ID),
    FOREIGN KEY (FACILITY_ID, LOCATION_SEQ_ID) REFERENCES FACILITY_LOCATION(FACILITY_ID, LOCATION_SEQ_ID)
);

-- 8. Product Association (Guidebook -> Manual)
DROP TABLE IF EXISTS PRODUCT_ASSOC;
CREATE TABLE IF NOT EXISTS PRODUCT_ASSOC (
    PRODUCT_ID VARCHAR(20),
    PRODUCT_ID_TO VARCHAR(20),
    PRODUCT_ASSOC_TYPE_ID VARCHAR(20) DEFAULT 'PRODUCT_COMPONENT',
    FROM_DATE DATETIME,
    THRU_DATE DATETIME,
    PRIMARY KEY (PRODUCT_ID, PRODUCT_ID_TO, PRODUCT_ASSOC_TYPE_ID, FROM_DATE),
    FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCT(PRODUCT_ID),
    FOREIGN KEY (PRODUCT_ID_TO) REFERENCES PRODUCT(PRODUCT_ID)
);

-- 9. Fixed Asset (Picking Carts)
DROP TABLE IF EXISTS FIXED_ASSET;
CREATE TABLE IF NOT EXISTS FIXED_ASSET (
    FIXED_ASSET_ID VARCHAR(20) PRIMARY KEY,
    FIXED_ASSET_TYPE_ID VARCHAR(20) DEFAULT 'PICKING_CART',
    FIXED_ASSET_NAME VARCHAR(100),
    LOCATED_AT_FACILITY_ID VARCHAR(20),
    FOREIGN KEY (LOCATED_AT_FACILITY_ID) REFERENCES FACILITY(FACILITY_ID)
);

-- 10. Fixed Asset Attribute (Cart Capacity)
DROP TABLE IF EXISTS FIXED_ASSET_ATTRIBUTE;
CREATE TABLE IF NOT EXISTS FIXED_ASSET_ATTRIBUTE (
    FIXED_ASSET_ID VARCHAR(20),
    ATTR_NAME VARCHAR(60) COMMENT 'e.g. maxUnitCapacity',
    ATTR_VALUE VARCHAR(255),
    PRIMARY KEY (FIXED_ASSET_ID, ATTR_NAME),
    FOREIGN KEY (FIXED_ASSET_ID) REFERENCES FIXED_ASSET(FIXED_ASSET_ID)
);

-- 11. Picklist (Cart Job)
DROP TABLE IF EXISTS PICKLIST;
CREATE TABLE IF NOT EXISTS PICKLIST (
    PICKLIST_ID VARCHAR(20) PRIMARY KEY,
    DESCRIPTION TEXT,
    FACILITY_ID VARCHAR(20),
    STATUS_ID VARCHAR(20),
    PICKLIST_DATE DATETIME,
    FOREIGN KEY (FACILITY_ID) REFERENCES FACILITY(FACILITY_ID)
);

-- 12. Picklist Item (Picker's Task)
DROP TABLE IF EXISTS PICKLIST_ITEM;
CREATE TABLE IF NOT EXISTS PICKLIST_ITEM (
    PICKLIST_ID VARCHAR(20),
    PICKLIST_BIN_ID VARCHAR(20),
    ORDER_ID VARCHAR(20),
    ORDER_ITEM_SEQ_ID VARCHAR(20),
    INVENTORY_ITEM_ID VARCHAR(20),
    ITEM_STATUS_ID VARCHAR(20),
    PRIMARY KEY (PICKLIST_ID, PICKLIST_BIN_ID, ORDER_ID, ORDER_ITEM_SEQ_ID),
    FOREIGN KEY (PICKLIST_ID) REFERENCES PICKLIST(PICKLIST_ID),
    FOREIGN KEY (INVENTORY_ITEM_ID) REFERENCES INVENTORY_ITEM(INVENTORY_ITEM_ID),
    FOREIGN KEY (ORDER_ID, ORDER_ITEM_SEQ_ID) REFERENCES ORDER_ITEM(ORDER_ID, ORDER_ITEM_SEQ_ID)
);

-- 13. Picklist Bin (Order Grouping)
DROP TABLE IF EXISTS PICKLIST_BIN;
CREATE TABLE IF NOT EXISTS PICKLIST_BIN (
    PICKLIST_BIN_ID VARCHAR(20) PRIMARY KEY,
    PICKLIST_ID VARCHAR(20),
    BIN_NUMBER INTEGER,
    PRIMARY_ORDER_ID VARCHAR(20),
    FOREIGN KEY (PICKLIST_ID) REFERENCES PICKLIST(PICKLIST_ID),
    FOREIGN KEY (PRIMARY_ORDER_ID) REFERENCES ORDER_HEADER(ORDER_ID)
);

-- 14. Party & Roles (Picker/Packer)
DROP TABLE IF EXISTS PARTY;
CREATE TABLE IF NOT EXISTS PARTY (
    PARTY_ID VARCHAR(20) PRIMARY KEY,
    PARTY_TYPE_ID VARCHAR(20),
    DESCRIPTION TEXT
);

DROP TABLE IF EXISTS ROLE_TYPE;
CREATE TABLE IF NOT EXISTS ROLE_TYPE (
    ROLE_TYPE_ID VARCHAR(20) PRIMARY KEY,
    PARENT_TYPE_ID VARCHAR(20),
    DESCRIPTION TEXT
);

DROP TABLE IF EXISTS PARTY_ROLE;
CREATE TABLE IF NOT EXISTS PARTY_ROLE (
    PARTY_ID VARCHAR(20),
    ROLE_TYPE_ID VARCHAR(20),
    PRIMARY KEY (PARTY_ID, ROLE_TYPE_ID),
    FOREIGN KEY (PARTY_ID) REFERENCES PARTY(PARTY_ID),
    FOREIGN KEY (ROLE_TYPE_ID) REFERENCES ROLE_TYPE(ROLE_TYPE_ID)
);

-- 15. User Login (Audit Trail)
DROP TABLE IF EXISTS USER_LOGIN;
CREATE TABLE IF NOT EXISTS USER_LOGIN (
    USER_LOGIN_ID VARCHAR(250) PRIMARY KEY,
    PARTY_ID VARCHAR(20),
    ENABLED CHAR(1),
    FOREIGN KEY (PARTY_ID) REFERENCES PARTY(PARTY_ID)
);

-- 16. Shipment (Order Tracker)
DROP TABLE IF EXISTS SHIPMENT;
CREATE TABLE IF NOT EXISTS SHIPMENT (
    SHIPMENT_ID VARCHAR(20) PRIMARY KEY,
    SHIPMENT_TYPE_ID VARCHAR(20),
    STATUS_ID VARCHAR(20),
    PRIMARY_ORDER_ID VARCHAR(20),
    DESTINATION_FACILITY_ID VARCHAR(20),
    FOREIGN KEY (PRIMARY_ORDER_ID) REFERENCES ORDER_HEADER(ORDER_ID)
);

-- 17. Shipment Item
DROP TABLE IF EXISTS SHIPMENT_ITEM;
CREATE TABLE IF NOT EXISTS SHIPMENT_ITEM (
    SHIPMENT_ID VARCHAR(20),
    SHIPMENT_ITEM_SEQ_ID VARCHAR(20),
    PRODUCT_ID VARCHAR(20),
    QUANTITY DECIMAL(18,4),
    PRIMARY KEY (SHIPMENT_ID, SHIPMENT_ITEM_SEQ_ID),
    FOREIGN KEY (SHIPMENT_ID) REFERENCES SHIPMENT(SHIPMENT_ID),
    FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCT(PRODUCT_ID)
);

-- 18. Shipment Box Type
DROP TABLE IF EXISTS SHIPMENT_BOX_TYPE;
CREATE TABLE IF NOT EXISTS SHIPMENT_BOX_TYPE (
    SHIPMENT_BOX_TYPE_ID VARCHAR(20) PRIMARY KEY,
    DESCRIPTION TEXT,
    BOX_LENGTH DECIMAL(18,4),
    BOX_WIDTH DECIMAL(18,4),
    BOX_HEIGHT DECIMAL(18,4)
);

-- 19. Shipment Package (Suggested Box)
DROP TABLE IF EXISTS SHIPMENT_PACKAGE;
CREATE TABLE IF NOT EXISTS SHIPMENT_PACKAGE (
    SHIPMENT_ID VARCHAR(20),
    SHIPMENT_PACKAGE_SEQ_ID VARCHAR(20),
    SHIPMENT_BOX_TYPE_ID VARCHAR(20),
    DATE_CREATED DATETIME,
    WEIGHT DECIMAL(18,4),
    PRIMARY KEY (SHIPMENT_ID, SHIPMENT_PACKAGE_SEQ_ID),
    FOREIGN KEY (SHIPMENT_ID) REFERENCES SHIPMENT(SHIPMENT_ID),
    FOREIGN KEY (SHIPMENT_BOX_TYPE_ID) REFERENCES SHIPMENT_BOX_TYPE(SHIPMENT_BOX_TYPE_ID)
);

-- 20. Shipment Package Content (Actual Packing)
DROP TABLE IF EXISTS SHIPMENT_PACKAGE_CONTENT;
CREATE TABLE IF NOT EXISTS SHIPMENT_PACKAGE_CONTENT (
    SHIPMENT_ID VARCHAR(20),
    SHIPMENT_PACKAGE_SEQ_ID VARCHAR(20),
    SHIPMENT_ITEM_SEQ_ID VARCHAR(20),
    INVENTORY_ITEM_ID VARCHAR(20) COMMENT 'Tracks exactly which serial number is in this box',
    QUANTITY DECIMAL(18,4),
    PRIMARY KEY (SHIPMENT_ID, SHIPMENT_PACKAGE_SEQ_ID, SHIPMENT_ITEM_SEQ_ID),
    FOREIGN KEY (SHIPMENT_ID, SHIPMENT_PACKAGE_SEQ_ID) REFERENCES SHIPMENT_PACKAGE(SHIPMENT_ID, SHIPMENT_PACKAGE_SEQ_ID),
    FOREIGN KEY (SHIPMENT_ID, SHIPMENT_ITEM_SEQ_ID) REFERENCES SHIPMENT_ITEM(SHIPMENT_ID, SHIPMENT_ITEM_SEQ_ID),
    FOREIGN KEY (INVENTORY_ITEM_ID) REFERENCES INVENTORY_ITEM(INVENTORY_ITEM_ID)
);

-- 21. Product Attribute (Compartments & Instructions)
DROP TABLE IF EXISTS PRODUCT_ATTRIBUTE;
CREATE TABLE IF NOT EXISTS PRODUCT_ATTRIBUTE (
    PRODUCT_ID VARCHAR(20),
    ATTR_NAME VARCHAR(60) COMMENT 'e.g. COMPARTMENT_ID, PACKING_INSTR',
    ATTR_VALUE VARCHAR(255),
    PRIMARY KEY (PRODUCT_ID, ATTR_NAME),
    FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCT(PRODUCT_ID)
);

-- 22. Invoice (Billing)
DROP TABLE IF EXISTS INVOICE;
CREATE TABLE IF NOT EXISTS INVOICE (
    INVOICE_ID VARCHAR(20) PRIMARY KEY,
    INVOICE_TYPE_ID VARCHAR(20),
    PARTY_ID_FROM VARCHAR(20),
    PARTY_ID_TO VARCHAR(20),
    INVOICE_DATE DATETIME,
    STATUS_ID VARCHAR(20)
);

SET FOREIGN_KEY_CHECKS = 1;
